[gd_scene load_steps=5 format=2]

[ext_resource path="res://red_player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[node name="RedPlayer" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WallDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetection"]
shape = SubResource( 2 )

[connection signal="body_entered" from="WallDetection" to="." method="_on_WallDetection_body_entered"]
[connection signal="body_exited" from="WallDetection" to="." method="_on_WallDetection_body_exited"]
